--- a/covid-19-tracker/package.json
+++ b/covid-19-tracker/package.json
@@ -9,14 +9,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "babel-loader": "^7.1.0",
     "chart.js": "^3.5.1",
+    "leaflet": "^1.7.1",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "webpack": "^4.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
